# xmcd_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: 0.01mJ.txt  19mJ.txt  19mj  2.7mJ.txt  2.7mj  43mJ.txt  43mj  Co_photo  Nphoto.txt  Nscatter  raw_mat.txt  raw_mat0.txt
examples/: predata.rs  scalable.rs  scatter.rs  simulation.rs
processed/: 01  02  19  43
slides/: xmcd.odp  xmcd.pptx
src/: lib.rs  main.rs  xas.rs
