[package]
name = "xmcd_rs"
version = "0.1.0"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
atoi = "0.3"
blas = "0.20"
plotters = {git="https://github.com/38/plotters.git", branch="master"}
rand = "0.7.2"
rbf-interp = "0.1.3"
nalgebra = "0.18.0"

[dependencies.peroxide]
git = "https://github.com/Axect/Peroxide.git"
default-features = false
features = ["O3", "plot", "dataframe"] 